Russian translation for comments

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,6 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>Об авторе</h1>
+  <p>Занимаюсь веб-разработкой, а также программированием для мобильных устройств. Интересуюсь технологиями и цифровыми гаджетами. На страницах этого блога найдут место любые темы, которые покажутся мне интересными.</p>
+
+  <p>e-mail для связи: <a href="mailto:poetinthecode@gmail.com">poetinthecode@gmail.com</a></p>
 </section>
