--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,6 +1,7 @@
 <section>
   <h1>Об авторе</h1>
-  <p>Занимаюсь веб-разработкой, а также программированием для мобильных устройств. Интересуюсь технологиями и цифровыми гаджетами. На страницах этого блога найдут место любые темы, которые покажутся мне интересными.</p>
+  <img src="/images/ava.jpg" style="float: right; margin-left: 10px;">
+  <p style="text-align: justify;">Занимаюсь веб-разработкой, а также программированием для мобильных устройств. Наиболее интересные темы из моей работы и жизни стараюсь освещать на страницах этого блога.</p>
 
   <p>e-mail для связи: <a href="mailto:poetinthecode@gmail.com">poetinthecode@gmail.com</a></p>
 </section>
