--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Блог</a></li>
   <li><a href="{{ root_url }}/blog/archives">Архивы</a></li>
+  <li><a href="{{ root_url }}/instruktsiia-octopress/">Инструкция Octopress</a></li>
 </ul>
