Added flickr integration

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Блог</a></li>
   <li><a href="{{ root_url }}/blog/archives">Архивы</a></li>
-  <li><a href="{{ root_url }}/instruktsiia-octopress/">Инструкция Octopress</a></li>
+  <li><a href="{{ root_url }}/fotki/">Фотки</a></li>
+  <li><a href="{{ root_url }}/instruktsiia-octopress/">Памятка octopress</a></li>
 </ul>
