--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -237,3 +237,16 @@
         }
     }
 }
+
+
+/* About Page */
+
+.about-info {
+    float: right;
+    margin-left: 20px;
+
+    img {
+        width: 250px;
+        border-radius: 150px;
+    }
+}
