--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 
+  {% if page.url == "/index.html" %}
+    <div id="welcome">
+      <div class="background"></div>
+      <div class="foreground">
+        <img src="/images/welcome-logo.png">
+        <p class="title">#Кодерские байки</p>
+        <p class="description">Блог о программировании и жизни</p>
+      </div>
+    </div>
+  {% endif %}
+
   {% include head.html %}
 
   <body>
