--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,9 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
-
+html, body {
+    height: 100%;
+}
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
