Changed main logo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-	<link href="/images/welcome-logo.png" rel="icon">
+	<link href="/images/blog_icon.png" rel="icon">
 </head>
