--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,10 @@
     <div id="welcome">
       <div class="background"></div>
       <div class="foreground">
-        <img src="/images/welcome-logo.png">
+        <a href="/">
+          <img src="/images/logo_1.png">
+          <img src="/images/logo_2.png" class="hidden">
+        </a>
         <p class="title">#Кодерские байки</p>
         <p class="description">Блог о программировании и жизни</p>
       </div>
