--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
 	<link href="/images/blog_icon.png" rel="icon">
+
+    <!-- Scripts -->
+    <script src="/assets/libs/jquery-2.1.4.min.js"></script>
 </head>
