Added comment counters

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,10 @@
 
     {% include footer.html %}
 
+    
+    <!-- Scripts -->
+    <script id="dsq-count-scr" src="//poetofcoderu.disqus.com/count.js" async></script>
+
   </body>
 
 </html>
