Added Font Awesome

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
 
 	<link href="/images/blog_icon.png" rel="icon">
 
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="/fonts/Font-Awesome-master/css/font-awesome.min.css">
+
     <!-- Scripts -->
     <script src="/assets/libs/jquery-2.1.4.min.js"></script>
 </head>
