--- a/urldecoder/style/main.css
+++ b/urldecoder/style/main.css
@@ -38,8 +38,17 @@ button {
 }
 
 div.result {
+	font-family: monospace;
 	margin-top: 20px;
 	word-wrap: break-word;
+}
+
+div.result a {
+	text-decoration: none;
+}
+
+div.result a:hover {
+	text-decoration: underline;
 }
 
 .error {
