--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,35 +1,62 @@
 $base_fonts_url: '/fonts';
 
+/* Roboto font */
+
 @font-face {
-    font-family: 'Aquarion';
-    src: local('Aquarion'), url('#{$base_fonts_url}/aquarion/aquarion.woff2') format('woff2'), url('#{$base_fonts_url}/aquarion/aquarion.woff') format('woff'), url('#{$base_fonts_url}/aquarion/aquarion.ttf') format('truetype');
+    font-family: 'Roboto';
+    src: local('Roboto Thin'), url('#{$base_fonts_url}/roboto/Roboto-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: local('Roboto Light'), url('#{$base_fonts_url}/roboto/Roboto-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: local('Roboto'), url('#{$base_fonts_url}/roboto/Roboto-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
-/*
 @font-face {
-    font-family: 'Arimo';
-    src: local('Arimo'), url('#{$base_fonts_url}/arimo/arimo.woff2') format('woff2'), url('#{$base_fonts_url}/arimo/arimo.woff') format('woff'), url('#{$base_fonts_url}/arimo/arimo.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Arimo';
-    src: local('Arimo Italic'), local('Arimo-Italic'), url('#{$base_fonts_url}/arimo/arimoitalic.woff2') format('woff2'), url('#{$base_fonts_url}/arimo/arimoitalic.woff') format('woff'), url('#{$base_fonts_url}/arimo/arimoitalic.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Arimo';
-    src: local('Arimo Bold'), local('Arimo-Bold'), url('#{$base_fonts_url}/arimo/arimobold.woff2') format('woff2'), url('#{$base_fonts_url}/arimo/arimobold.woff') format('woff'), url('#{$base_fonts_url}/arimo/arimobold.ttf') format('truetype');
+    font-family: 'Roboto';
+    src: local('Roboto Bold'), url('#{$base_fonts_url}/roboto/Roboto-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
+
+
+/* Roboto-Mono font */
+
 @font-face {
-    font-family: 'Arimo';
-    src: local('Arimo Bold Italic'), local('Arimo-BoldItalic'), url('#{$base_fonts_url}/arimo/arimobolditalic.woff2') format('woff2'), url('#{$base_fonts_url}/arimo/arimobolditalic.woff') format('woff'), url('#{$base_fonts_url}/arimo/arimobolditalic.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
+    font-family: 'RobotoMono';
+    src: local('RobotoMono Thin'), url('#{$base_fonts_url}/roboto-mono/RobotoMono-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
 }
-*/
+
+@font-face {
+    font-family: 'RobotoMono';
+    src: local('RobotMono Light'), url('#{$base_fonts_url}/roboto-mono/RobotoMono-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'RobotoMono';
+    src: local('RobotoMono'), url('#{$base_fonts_url}/roboto-mono/RobotoMono-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'RobotoMono';
+    src: local('RobotoMono Bold'), url('#{$base_fonts_url}/roboto-mono/RobotoMono-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
