--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -176,6 +176,10 @@
     > li {
         margin-bottom: $spacing-unit*2.5;
     }
+
+    h2 {
+        margin-top: $spacing-unit / 2;
+    }
 }
 
 .post-meta {
