--- a/css/main.scss
+++ b/css/main.scss
@@ -6,14 +6,15 @@
 
 
 // Our variables
-$base-font-family: Aquarion, Helvetica, Arial, sans-serif;
-$base-font-size:   20px;
+$base-font-family: Roboto, Helvetica, Arial, sans-serif;
+$base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.3;
+$base-font-weight: 300;
+$base-line-height: 30px;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
