--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,8 @@ $spacing-unit:     30px;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+/*$brand-color:      #2a7ae2;*/
+$brand-color: #4DB6AC;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
