--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $spacing-unit:     30px;
 $text-color:       #333;
 $background-color: #fdfdfd;
 /*$brand-color:      #2a7ae2;*/
-$brand-color: #4DB6AC;
+$brand-color: #009688;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
