--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -135,9 +135,8 @@ pre,
 code {
     font-size: 16px;
     border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    /* background-color: #eef; */
-    background-color: #f0f5f1;
+    border-radius: 5px;
+    background-color: #eef; 
     font-family: "RobotoMono";
     line-height: 26px;
     font-weight: 400;
