--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,15 @@ layout: default
     {{ content }}
   </article>
 
+	<div class="PageNavigation">
+		<h1>Читайте также</h1>
+	  {% if page.previous.url %}
+	    <a class="prev" href="{{page.previous.url}}"><i class="fa fa-long-arrow-left"></i>&nbsp;{{page.previous.title}}</a>
+	  {% endif %}
+	  {% if page.next.url %}
+	    <a class="next" href="{{page.next.url}}">{{page.next.title}}&nbsp;<i class="fa fa-long-arrow-right"></i></a>
+	  {% endif %}
+	</div>
 
 	{% if page.comments %}
 		<div id="disqus_thread"></div>
