--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -365,3 +365,30 @@ $welcome_content_height: 400px;
         text-decoration: none;
     }
 }
+
+
+/* Next/Prev links. Source: http://david.elbe.me/jekyll/2015/06/20/how-to-link-to-next-and-previous-post-with-jekyll.html */
+
+.PageNavigation {
+    font-size: 18px;
+    display: block;
+    width: auto;
+    overflow: hidden;
+    margin-bottom: 40px;
+
+    h1 {
+        margin-bottom: 20px;
+    }
+
+    a {
+        display: block;
+        width: 50%;
+        float: left;
+        margin: 1em 0;
+        font-weight: 500;
+    }
+    
+    .next {
+        text-align: right;
+    }
+}
