--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,27 @@
 
     <!-- Scripts -->
     <script src="/assets/libs/jquery-2.1.4.min.js"></script>
+    {% if page.url == "/" %}
+      <script type="text/javascript">"/assets/libs/trianglify.min.js"</script>
+      <script>
+        $(function() {
+          function generateCanvas() {    
+            var pattern = Trianglify({
+                width: 1600,
+                height: 200
+            });
+
+            return pattern.png();
+          }
+
+          function updateCanvas() {
+            var png = generateCanvas();
+            $('.intro').css('background-image', 'url({png})'.replace('{png}', png));
+          }
+
+          // First time generation
+          updateCanvas();
+        });
+      </script>
+    {% endif %}    
 </head>
