--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,6 +94,7 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    background-color: #eff8ff;
 
     a {
         font-weight: 400;
@@ -390,5 +391,37 @@ $welcome_content_height: 400px;
     
     .next {
         text-align: right;
+    }
+}
+
+
+/* Intro block on Index page */
+
+.intro {
+    height: 200px;
+    box-sizing: border-box;
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+    position: relative;
+    margin-bottom: 40px;
+    overflow: hidden;
+
+    .text {
+        box-sizing: border-box;
+        background-color: rgba(255, 255, 255, 0.6);
+        color: #333;
+        display: inline-block;
+        padding: 0 15px;
+        font-size: 18px;
+        font-weight: 400;
+    }
+
+    .text.first {
+        margin-top: 50px;
+    }
+
+    .text.second {
+        margin-left: 50px;
     }
 }
