--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -265,70 +265,22 @@
 .about-info {
     float: right;
     margin-left: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 
     img {
         width: 250px;
         border-radius: 150px;
-    }
-}
-
-
-/* Welcome section */
-
-$welcome_content_height: 400px;
-
-#welcome {
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-
-    .foreground {
-        position: absolute;
-        z-index: 10;
-        top: 0px;
-        width: 100%;
-        text-align: center;
-        top: 50%;
-        height: $welcome_content_height;
-        margin-top: -$welcome_content_height/2;
 
         @include media-query($on-palm) {
-            height: $welcome_content_height/2;
-            margin-top: -$welcome_content_height/4;
-        }
-
-        a {
-            text-decoration: none;
-            color: $text-color;
-        }
-
-        img {
-            width: 180px;
-
-            @include media-query($on-palm) {
-                width: 100px;
-            }
-        }
-
-        .title {
-            font-size: 4rem;
-            font-weight: bold;
-
-            @include media-query($on-palm) {
-                font-size: 2rem;
-            }
-        }
-
-        .description {
-            font-size: 1.5rem;
-            font-style: italic;
-
-            @include media-query($on-palm) {
-                font-size: 1rem;
-            }
+            width: 150px;
         }
     }
 
+    @include media-query($on-palm) {
+        float: none;
+        margin-left: 0;
+    }
 }
 
 
