Some more fixes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
         $(function() {
           function generateCanvas() {    
             var pattern = Trianglify({
-                width: 1600,
+                width: screen.width > 200 ? screen.width : 1600,
                 height: 200
             });
 
