--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
     <!-- Scripts -->
     <script src="/assets/libs/jquery-2.1.4.min.js"></script>
-    {% if page.url == "/" %}
+    {% if paginator %}
       <script type="text/javascript">"/assets/libs/trianglify.min.js"</script>
       <script>
         $(function() {
