--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
   </div>
 </header>
 
-{% if page.url == "/" %}
+{% if paginator %}
   <div class="intro">
     <div class="wrapper">
       <p class="text first">Добро пожаловать на мой блог!</p>
