--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,7 +133,7 @@ blockquote {
  */
 pre,
 code {
-    font-size: 16px;
+    font-size: $code-font-size;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     background-color: #eef; 
