--- a/css/main.scss
+++ b/css/main.scss
@@ -7,10 +7,11 @@
 
 // Our variables
 $base-font-family: Roboto, Helvetica, Arial, sans-serif;
-$base-font-size:   18px;
+$base-font-size:   17px;
+$code-font-size: 14px;
 $small-font-size:  $base-font-size * 0.875;
 $base-font-weight: 300;
-$base-line-height: 30px;
+$base-line-height: 25px;
 
 $spacing-unit:     30px;
 
@@ -24,32 +25,32 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    960px;
 
 $on-palm:          600px;
-$on-laptop:        800px;
+$on-laptop:        960px;
 
 
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
+	//     .wrapper {
+		//         padding-right: $spacing-unit / 2;
+		//         padding-left: $spacing-unit / 2;
+		//     }
+		// }
+		@mixin media-query($device) {
+			@media screen and (max-width: $device) {
+				@content;
+			}
+		}
 
 
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
+		// Import partials from `sass_dir` (defaults to `_sass`)
+		@import
 		"fonts",
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+		"base",
+		"layout",
+		"syntax-highlighting"
+		;
