--- a/css/main.scss
+++ b/css/main.scss
@@ -12,8 +12,9 @@ $code-font-size: 14px;
 $small-font-size:  $base-font-size * 0.875;
 $base-font-weight: 300;
 $base-line-height: 25px;
-
 $spacing-unit:     30px;
+$header-height: 56px;
+$header-image-height: 300px;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
