--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,44 +1,52 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta"><i class="fa fa-calendar-o"></i>&nbsp;{% assign m = page.date | date: "%-m" %}
-          {{ page.date | date: "%-d" }}
-          {% case m %}
-          {% when '1' %}января
-          {% when '2' %}февраля
-          {% when '3' %}марта
-          {% when '4' %}апреля
-          {% when '5' %}мая
-          {% when '6' %}июня
-          {% when '7' %}июля
-          {% when '8' %}августа
-          {% when '9' %}сентября
-          {% when '10' %}октября
-          {% when '11' %}ноября
-          {% when '12' %}декабря
-          {% endcase %}
-          {{ page.date | date: "%Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<div class="post{% if page.image %} with-image{% endif %}">
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-	<div class="PageNavigation">
-		<h1>Читайте также</h1>
-	  {% if page.previous.url %}
-	    <a class="prev" href="{{page.previous.url}}"><i class="fa fa-long-arrow-left"></i>&nbsp;{{page.previous.title}}</a>
-	  {% endif %}
-	  {% if page.next.url %}
-	    <a class="next" href="{{page.next.url}}">{{page.next.title}}&nbsp;<i class="fa fa-long-arrow-right"></i></a>
-	  {% endif %}
+	{% if page.image %}
+	<div class="header-image" style="background-image: url(/images/{{ page.image }});">
+		<!-- 		<img src="/images/{{ page.image }}" /> -->
+		<div class="overlay"></div>
 	</div>
+	{% endif %}
 
-	{% if page.comments %}
+	<header class="post-header">
+		<h1 class="post-title">{{ page.title }}</h1>
+		<p class="post-meta"><i class="fa fa-calendar-o"></i>&nbsp;{% assign m = page.date | date: "%-m" %}
+			{{ page.date | date: "%-d" }}
+			{% case m %}
+			{% when '1' %}января
+			{% when '2' %}февраля
+			{% when '3' %}марта
+			{% when '4' %}апреля
+			{% when '5' %}мая
+			{% when '6' %}июня
+			{% when '7' %}июля
+			{% when '8' %}августа
+			{% when '9' %}сентября
+			{% when '10' %}октября
+			{% when '11' %}ноября
+			{% when '12' %}декабря
+			{% endcase %}
+			{{ page.date | date: "%Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+		</header>
+
+		<article class="post-content">
+			{{ content }}
+		</article>
+
+		<div class="PageNavigation">
+			<h1>Читайте также</h1>
+			{% if page.previous.url %}
+			<a class="prev" href="{{page.previous.url}}"><i class="fa fa-long-arrow-left"></i>&nbsp;{{page.previous.title}}</a>
+			{% endif %}
+			{% if page.next.url %}
+			<a class="next" href="{{page.next.url}}">{{page.next.title}}&nbsp;<i class="fa fa-long-arrow-right"></i></a>
+			{% endif %}
+		</div>
+
+		{% if page.comments %}
 		<div id="disqus_thread"></div>
 		<script>
 		/**
@@ -52,14 +60,14 @@ layout: default
 		};
 		*/
 		(function() { // DON'T EDIT BELOW THIS LINE
-		var d = document, s = d.createElement('script');
+			var d = document, s = d.createElement('script');
 
-		s.src = '//poetofcoderu.disqus.com/embed.js';
+			s.src = '//poetofcoderu.disqus.com/embed.js';
 
-		s.setAttribute('data-timestamp', +new Date());
-		(d.head || d.body).appendChild(s);
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
 		})();
-		</script>
-		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>	
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>	
 	{% endif %}
 </div>
