--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,13 @@ $spacing-unit:     30px;
 $header-height: 56px;
 $header-image-height: 300px;
 
+$intro-transition-duration: 700ms;
+
+$fab-size: 50px;
+$fab-shadow-offset: 3px;
+$fab-shadow-offset-active: $fab-shadow-offset/2;
+$fab-shadow-opacity: 0.25;
+
 $text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color: #1976D2;
