--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@ $header-image-height: 300px;
 $intro-transition-duration: 700ms;
 
 $fab-size: 50px;
+$fab-icon-size: 60%;
 $fab-shadow-offset: 3px;
 $fab-shadow-offset-active: $fab-shadow-offset/2;
 $fab-shadow-opacity: 0.25;
