--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,7 @@ $fab-icon-size: 60%;
 $fab-shadow-offset: 3px;
 $fab-shadow-offset-active: $fab-shadow-offset/2;
 $fab-shadow-opacity: 0.25;
+$fab-vis-duration: 500ms;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
