Fixed selection on Anroid

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {% include footer.html %}
 
     
-    <div class="fab">
+    <div class="fab noSelect">
       <span class="icon"></span>
     </div>
 
