--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -389,6 +389,17 @@
     margin-top: (100%-$fab-icon-size)/2;
 }
 
+/* Source: https://stackoverflow.com/questions/21003535/anyway-to-prevent-the-blue-highlighting-of-elements-in-chrome-when-clicking-quic */
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
 
 /* Pagination */
 
