--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,8 +167,8 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    padding-right: 10%;
+    padding-left: 10%;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
