Changing button bg color animation

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -388,7 +388,7 @@
     display: block;
     width: $fab-icon-size;
     height: $fab-icon-size;
-    background-image: url(/images/icon_reload.svg);
+    background-image: url(/images/ic_smile.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
