--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -85,7 +85,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
-    color: #546E7A;
+    color: $header-color;
 }
 
 
@@ -215,4 +215,8 @@ pre {
 
 .hidden {
     display: none;
+}
+
+.inline {
+    display: inline;
 }
