--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@ $fab-vis-duration: 500ms;
 $text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color: #1976D2;
+$header-color: #424242;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
