--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -196,7 +196,7 @@
     font-size: 36px;
     font-weight: 400;
     line-height: 30px;
-    color: #546E7A;
+    color: $header-color;
 }
 
 .comments-count {
@@ -373,7 +373,7 @@
 
     &.visible {
         bottom: 10%;
-    
+
         @include media-query($on-palm) {
             bottom: $fab-size/2;
         }            
@@ -516,5 +516,30 @@
         @include media-query($on-palm) {
             margin-left: 0;
         }            
+    }
+}
+
+/* Tags */
+.tag_list {
+    margin-top: 10px;
+    margin-left: 0;
+
+    li {
+        margin-right: 5px;
+
+        a {
+            background-color: #f1f4ff;
+            padding: 3px 5px;
+            border-radius: 5px;
+            text-decoration: none;
+
+            -webkit-transition: background-color 0.2s ease;
+            -ms-transition: background-color 0.2s ease;
+            transition: background-color 0.2s ease;
+
+            &:hover {
+                background-color: darken(#f1f4ff, 10%);
+            }
+        }
     }
 }
