--- a/stylesheets/jsimpression/jsImpression.css
+++ b/stylesheets/jsimpression/jsImpression.css
@@ -8,10 +8,12 @@
     top:0;
     left:0;
     z-index:8;
+    display: none;
 }
 
 .jsimpression-container img.active {
     z-index:10;
+    display: block;
 }
 
 .jsimpression-container img.last-active {
