--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,9 +36,9 @@ layout: default
 			{{ content }}
 		</article>
 
-		<ul class="tag_list">
+		<ul class="tag-list">
 			{% for tag in page.tags %}
-			<li class="inline archive_list"><a class="tag_list_link" href="/tag/#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
+			<li class="inline archive_list"><a class="tag" href="/tag/#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
 			{% endfor %}
 		</ul>
 
