--- a/css/main.scss
+++ b/css/main.scss
@@ -8,9 +8,10 @@
 // Our variables
 $base-font-family: Roboto, Helvetica, Arial, sans-serif;
 $base-font-size:   17px;
+$small-font-size: 15px;
 $code-font-size: 14px;
 $small-font-size:  $base-font-size * 0.875;
-$base-font-weight: 300;
+$base-font-weight: 400;
 $base-line-height: 25px;
 $spacing-unit:     30px;
 $header-height: 56px;
