--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -554,5 +554,27 @@
 }
 
 .posts-by-tag {
-  list-style-type: none;    
+  list-style-type: none;
 }
+
+
+/* Button "Read more" */
+
+.read-more {
+    display: none;
+
+    border-radius: 30px;
+    padding: 10px;
+    border: 1px solid #ccc;
+
+    &:hover {
+        text-decoration: none;
+        background: #eee;
+        text-decoration: none;
+    }
+
+    @include media-query($on-palm) {
+        display: inline-block;
+    }            
+}
+
