--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -196,7 +196,6 @@
     font-size: 36px;
     font-weight: 400;
     line-height: 30px;
-    color: $header-color;
 }
 
 .comments-count {
@@ -482,7 +481,7 @@
     background-position: center center;
     margin-bottom: 40px;
     overflow: hidden;
-    background-color: #eff8ff;
+    /* background-color: #eff8ff;*/
     border-bottom: 1px solid #e8e8e8;
 
     -webkit-transition: background-image $intro-transition-duration linear;
@@ -521,7 +520,7 @@
 
 /* Tags */
 .tag-list {
-    margin-top: 10px;
+    margin-top: 30px;
     margin-left: 0;
 
     li {
