--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -483,6 +483,7 @@
     overflow: hidden;
     /* background-color: #eff8ff;*/
     border-bottom: 1px solid #e8e8e8;
+    background-image: url(/images/header_bg.jpg);
 
     -webkit-transition: background-image $intro-transition-duration linear;
     -ms-transition: background-image $intro-transition-duration linear;
@@ -490,8 +491,8 @@
 
     .text {
         box-sizing: border-box;
-        background-color: rgba(255, 255, 255, 0.6);
-        color: #333;
+        background-color: rgba(255, 255, 255, 0.75);
+        color: #000;
         display: inline-block;
         padding: 0 15px;
         font-size: $base-font-size;
