--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@ $fab-vis-duration: 500ms;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color: #1976D2;
+$brand-color: #165898;
 $header-color: #424242;
 
 $grey-color:       #828282;
