--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,7 @@
 layout: default
 ---
 
-<div class="post{% if page.image %} with-image{% endif %}">
-
-	{% if page.image %}
-	<div class="header-image" style="background-image: url(/images/{{ page.image }});">
-		<!-- 		<img src="/images/{{ page.image }}" /> -->
-		<div class="overlay"></div>
-	</div>
-	{% endif %}
-
+<div class="post">
 	<header class="post-header">
 		<h1 class="post-title">{{ page.title }}</h1>
 		<p class="post-meta"><i class="fa fa-calendar-o"></i>&nbsp;{% assign m = page.date | date: "%-m" %}
