--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   {% seo %}
+  {% if page.image %}
+    <meta name="twitter:image" content="{{ page.image | prepend: site.baseurl | prepend: site.url }}"/>
+  {% endif %}
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
